# bt-threat-intel

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: alias_cache.yaml  feeds.yaml  stack.example.yaml
scripts/: init_db.sql  reembed_exposures.py  run_analysis.py  run_correlator.py  run_ingestion.py  run_pipeline.py  scheduler.py
src/alerting/: alerter.py
src/analysis/: client.py  playbook.py  triage.py  ttp_mapper.py
src/api/: main.py
src/chat/: pipeline.py
src/correlator/: correlator.py
src/ingestion/: alias_generator.py  assets.py  base_feed.py  embeddings.py  models.py  pipeline.py  store.py
src/ingestion/feeds/: cisa_kev_feed.py  exploitdb_feed.py  github_poc_feed.py  nvd_feed.py  otx_feed.py
ui/: app.py
